--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,10 @@
 	</div>
 </div> <!--row-->
 </div><!--container--->
+
+<footer class="text-right text-lg-start bg-light text-muted">
+	version of code: v0.3 ,May 2021&nbsp;&nbsp;&nbsp;
+</footer>
 {%endblock%}
 
 {%block footer%}
